# lending-club-credit-risk-modeling

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_eda.ipynb
scripts/: process_raw_data.py
src/: data_processing.py  eda.py  variables.py
